dnl Process this file with autoconf to produce a configure script.
AC_INIT(canonical.c)

dnl Checks for programs
AC_PROG_CC

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(getcwd)

AC_OUTPUT(Makefile)
